// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render the homepage 1`] = `
<ThemeProvider
  overrides={
    Object {
      "typography": Object {
        "fontFamily": "\\"Avenir LT W01 55 Roman\\", Arial, sans-serif",
        "h4": Object {
          "fontFamily": "\\"Avenir LT W01 85 Heavy\\", Arial, sans-serif",
        },
        "h5": Object {
          "fontFamily": "\\"Avenir LT W01 85 Heavy\\", Arial, sans-serif",
        },
      },
    }
  }
>
  <React.Suspense
    fallback={<React.Fragment />}
  >
    <div
      className="c-dashboard c-dashboard--page-type-not-found c-dashboard--max-width"
    >
      <Header
        embedPreviewMode={false}
        hasEmbedButton={false}
        hasMaxWidth={true}
        hasPrintButton={false}
        homePage={false}
        printMode={false}
        printOrEmbedMode={false}
        user={Object {}}
      />
      <div
        className="c-dashboard__body "
      >
        <div
          className="u-grid u-full-height"
        >
          <div
            className="u-row u-full-height"
          >
            <React.Lazy />
            <Connect(ModalComponent) />
          </div>
        </div>
      </div>
    </div>
  </React.Suspense>
</ThemeProvider>
`;

exports[`App should render the mapview 1`] = `
<ThemeProvider
  overrides={
    Object {
      "typography": Object {
        "fontFamily": "\\"Avenir LT W01 55 Roman\\", Arial, sans-serif",
        "h4": Object {
          "fontFamily": "\\"Avenir LT W01 85 Heavy\\", Arial, sans-serif",
        },
        "h5": Object {
          "fontFamily": "\\"Avenir LT W01 85 Heavy\\", Arial, sans-serif",
        },
      },
    }
  }
>
  <React.Suspense
    fallback={<React.Fragment />}
  >
    <div
      className="c-dashboard c-dashboard--page-type-not-found c-dashboard--max-width"
    >
      <Header
        embedPreviewMode={false}
        hasEmbedButton={true}
        hasMaxWidth={true}
        hasPrintButton={true}
        homePage={false}
        printMode={false}
        printOrEmbedMode={false}
        user={Object {}}
      />
      <div
        className="c-dashboard__body "
      >
        <div
          className="u-grid u-full-height"
        >
          <div
            className="u-row u-full-height"
          >
            <React.Lazy />
            <Connect(ModalComponent) />
          </div>
        </div>
      </div>
    </div>
  </React.Suspense>
</ThemeProvider>
`;
